Fristen; Rücknahme der Eröffnung; Kleinere Fixes.

--- a/Gerichtszusammensetzung.tex
+++ b/Gerichtszusammensetzung.tex
@@ -10,7 +10,7 @@
 Das Schiedsgericht ist zwar kein Organ\index[idx]{Organ} im Sinne des \S~8 Abs.~2 PartG\index[paridx]{PartG!8@\S~8!2@Abs.~2}\footnote{MISSING: Kommentare}, da es nicht der originiären politischen Willensbildung der Partei dient, allerdings ist es grundsätzlich ein Organ im weiteren Sinne.
 Dementsprechend haben die Satzungen der Piratenparteien und ihrer Untergliederungen das Schiedsgericht typischerweise auch als Organ bezeichnet.\footnote{MISSING: Satzungen}
 
-\section{Das Organ Schiedsgericht und seine Zusammentzung}
+\section{Das Organ Schiedsgericht und seine Zusammensetzung}
 \label{Zusammensetzung:Organ}
 Das Organ setzt sich zusammen aus allen gewählten Richtern und Ersatzrichtern.
 Für das Organ selbst gibt es dabei noch keine Unterscheidung in der Titelqualität.
