--- a/Standardworkflow-Anrufung.tex
+++ b/Standardworkflow-Anrufung.tex
@@ -90,6 +90,15 @@ Die Anschrift ist notwendig, damit das Schiedsgericht im Verfahren mit den Parte
 Auch wenn die Kommunikation per E-Mail im Verfahren üblich ist, ist es hier notwendig, dass eine postalische Adresse genannt wird.\footnote{Ausführlich dazu \cite[S. 3]{BSG20130715} mwN.}
 So gibt es zwar keinen Anspruch mehr in der SGO auf eine Urteilszusendung in Schriftform, die die Kenntnis einer postalischen Adresse früher zwingend machte, jedoch ist die Anschrift nach wie vor zur Individualisierung und damit zur Mitgliedsverifikation durch das Schiedsgericht erforderlich. Auch im Fall, dass eine Person mittels einer lediglich vom Verfahrensgegner genannten E-Mailadresse nicht erreichbar ist, ist eine zusätzlicher Kontaktversuch per Brief erforderlich, um die Rechte der nicht erreichbaren Verfahrenspartei zu sichern.
 
+Da es allerdings nicht die Erforderlichkeit, den Ansprüchen einer ladungsfähigen Adresse genügen zu müssen, ist eine Postfachanschrift ausreichend und erfüllt die Anforderungen der Schiedsgerichtsordnung.\footnote{Mit Begründung etwa \cites[3]{BSG20130715}[S.~4 Rn~16]{LSGBB145}{LSGBB134}. Lediglich bestätigend etwa \cites[7]{LSGBB133}[S.~10~f. Rn~48]{LSGBB146}.}
+Dies gilt nicht nur für den Fall, dass die Anrufung durch ein Mitglied erfolgt,\footnote{So aber \cites[S.~1]{LSGBB134}.} sondern gerade auch für den Fall, dass die Anrufung durch ein Organ oder eine Gliederung erfolgt.\footnote{\cites[S.~2~f.]{BSG20131230}.}
+
+Gerade aber der Grund der Mitgliedsverifikation könnte auch gegen die Zulässigkeit einer Postfachanschrift zur ERfüllung von \S~8 Abs.~3 Nr.~1, 2 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} sprechen.
+Wie das Landesschiedsgericht Brandenburg zutreffend ausführt, hängt das davon ab, ob im Mitgliederverzeichnis ebenfalls Postfachanschriften geführt werden können.\footnote{\cites[S.~4 Rn~16]{LSGBB145}.}
+Dies sollte aber gerade nicht der Fall sein, da die Anschrift im Mitgliederverzeichnis regelmäßig zur Feststellung der Stimmberechtigung bei Aufstellungsversammlungen nach den Wahlgesetzen benutzt wird und dafür auch notwendig ist.
+Ist aber die Angabe eine Postfachanschrift im Mitgliederverzeichnis unzulässig, kann darüber gerade keine Identitätsverifikation erfolgen.
+Die Postfachanschrift erfüllt ihren Zweck nach \S~8 Abs.~3 Nr.~1, 2 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} dann gerade nicht mehr und erfüllt daher diese Anforderung nicht mehr.
+
 Die weiteren Kontaktdaten gemäß \S~8 Abs.~3 Nr.~1 SGO\index[paridx]{SGO!8@\S~8!3@Abs.~3} umfassen Daten wie eine E-Mailadresse. Diese ist aus prozessökonomischen Gründen sinnvoll, da ein Information per E-Mail die Verfahrensparteien schneller erreicht und diese auch schneller reagieren können. Das ganz das Verfahren insgesamt erheblich beschleunigen und macht die direkte Versendung in Kopie zudem einfacher.
 
 Dass die Anschrift unbekannt ist, kann auch nie ein Problem darstellen. Verfahren von Mitglied gegen Mitglied sind schon gar nicht vorgesehen (siehe \ref{Standardworkflow:Antragsgegner}), der Partei ist die Anschrift eines Mitglieds aus der Mitgliederdatenbank bekannt, die Anschrift der Partei und der Gliederungen sind allgemein bekannt, die Organe haben ihre Anschrift für gewöhnlich bei der Gliederung, oder, falls diese abweicht, ist sie vom Organ bekannt gemacht.
@@ -151,7 +160,8 @@ Es reicht daher ein Schreiben, das mit dem Namen unterzeichnet ist und das in ei
 Die Frist für eine Anrufung soll sicherstellen, dass Streitigkeiten schnell geklärt werden.
 Damit soll verhindert werden, dass auf Basis einer möglicherweise rechtswidrigen Handlung weitere Dinge passieren und eine Klage, die erst nach langer Zeit eingereicht wird, unerwartet alles mitreißen kann.
 Kurz gesagt: Nach einer gewissen Zeit sollen alle möglicherweise Betroffenen auf einen eingetretenen Zustand vertrauen können.
-Daher darf nach Ablauf dieser Frist nicht mehr geklagt werden.
+Daher darf nach Ablauf dieser Frist nicht mehr geklagt werden und eine Anrufung, die bei Fristende noch nicht vollständig beim angerufenen Schiedsgericht eingegangen ist, ist grundsätzlich abzuweisen.\footnote{So die ständige Rechtsprechung des Bundesschiedsgerichts, statt vieler: \cites{BSG2315HS}{BSG20130227}.}
+
 Dabei kennt die SGO unterschiedliche Anrufungsfristen.
 \begin{enumerate}
 \item Die Standardanrufungsfrist von 2 Monaten, \S~8 Abs.~4 Satz~1 SGO\index[paridx]{SGO!8@\S~8!4@Abs.~4}
@@ -161,7 +171,20 @@ Dabei kennt die SGO unterschiedliche Anrufungsfristen.
 \item Die Berufungfrist gegen ein Urteil ohne korrekte Rechtsmittelbelehrung, \S~13 Abs.~2 Satz~4 SGO\index[paridx]{SGO!13@\S~13!2@Abs.~2}
 \end{enumerate}
 
-TODO
+Die Ausnahme stellt hier die Anrufungsfrist im Parteiausschlussverfahren dar.
+Diese ist keine formelle Frist wie die anderen Fristen dar, sondern ist eine wertende, materielle Präklusionsfrist.
+Das bedeutet, dass über die fristgerechte Einbringung der Vorwürfe nicht schon mit Eröffnung zu bescheiden ist, sondern erst im Urteil nach durchlaufenem Verfahren.
+Dies soll einerseits das Parteimitglied dagegen schützen, dass es sich gegen alte Vorwürfe schützen muss und andererseits ein Parteiausschlussverfahren auch dann noch ermöglichen, wenn einzelne Handlungen schon länger zurück liegen, aber Teil eines Großen und Ganzen sind, das einen einzigen, fortlaufende Gesamtverstoß gegen Satzung, Grundsätze oder Ordnung der Partei mit schwerem Schaden darstellt.\footnote{Zur Zulässigkeit des Parteiausschlusses aufgrund eines solchen Gesamtverstoßes \cite[S.~19]{LSGHE20130624} mwN\nomenclature{mwN}{mit weiteren Nachweisen} und später bestätigend \cite{BSG20131028}.}
+Alle anderen genannten Fristen sind dagegen echte formelle Fristen die schon die Eröffnung eines Verfahrens verhindern sollen.
+
+Die Fristberechnung folgt dabei den \SSS~186 ff. BGB\index[paridx]{BGB!186@\S~186}.
+Der Fristanfang wird nach \S~187 Abs.~1BGB\index[paridx]{BGB!187@\S~187 Abs.~1} bestimmt, das Fristende nach \S~188 BGB\index[paridx]{BGB!188@\S~188}.
+Das ist auch der Grund, warum in der Schiedsgerichtsordnung eine Ladungsfrist für (fern-)mündliche Verhandlungen in \S~10 Abs.~5 Satz~2 SGO\index[paridx]{SGO!10@\S~10!5@Abs.~5} auf 13 Tage gesetzt ist und nicht etwa 14 Tage oder zwei Wochen.
+So kann das Schiedsgericht in seiner Sitzung einen Verhandlungstermin beschließen und wenn es am selben Tag noch zur Verhandlung lädt, kann diese am selben Wochentag in der zweiten Woche danach stattfinden und nicht erst in der dritten Woche danach.
+
+Besonders geachtet werden sollte dabei vor allem auf \S~193 BGB\index[paridx]{BGB!193@\S~193} geachtet werden: Endet die Frist an einem Samstag, Sonntag oder gesetzlichen Feiertag, dann verlängert sich die Frist entsprechend.
+Eine Fristende an einem Samstag um 24 Uhr wird somit zu einem Fristende am Montag um 24 Uhr (vorausgesetzt, dass der Montag kein Feiertag ist, dann wäre das Ende am Dienstag um 23 Uhr usw.).
+Dabei müssen vor allem das Bundesschiedsgericht, aber auch für Landesschiedsgerichte, die verwiesene Verfahren behandeln, im Auge behalten, dass jedes Bundesland eigene Feiertagsgesetze hat.
 
 \subsection{Zuständigkeit}
 \label{Standardworkflow:Zustaendigkeit}
@@ -172,7 +195,12 @@ So ist es bereits aus den Daten der Anrufung ersichtlich, ob ein Gericht zustän
 
 \subsubsection{Grundlegendes}
 \label{Standardworkflow:Zustaendigkeit:Grundlegendes}
-Dabei wird instanziell bei den untersten Gerichten, also den Landesschiedsgerichten begonnen, \S~6 Abs.~1 SGO\index[paridx]{SGO!6@\S~6!1@Abs.~1}.
+Dabei wird instanziell bei den untersten Gerichten begonnen, \S~6 Abs.~1 SGO\index[paridx]{SGO!6@\S~6!1@Abs.~1}.
+Das sind grundsätzlich die Landesschiedsgerichte.
+Allerdings kann der Satzungsgeber auf Landesebene die Einrichtung von niedrigeren Schiedsgerichten in der Landessatzung für den jeweiligen Landesverband erlauben, \S~2 Abs.~1 Satz~2 SGO\index[paridx]{SGO!2@\S~2!1@Abs.~1}.
+Ist das passiert, ist das niederigste Schiedsgericht der entsprechenden Regelung zu entnehmen.
+Bisher ist das allerdings in keinem Landesverband passiert.
+
 \S~6 Abs.~2 SGO\index[paridx]{SGO!6@\S~6!2@Abs.~2} bestimmt dann noch, dass sie die Zuständigkeit nach der Verbandszugehörigkeit des Antragsgegners richtet.
 Verbandszugehörige sind die Mitglieder eines Verbandes, das können nach \S~2 Abs.~1 Satz~2 PartG\index[paridx]{PartG!2@\S~2!1@Abs.~1} nur natürliche Personen sein.
 Dabei wird in \S~6 Abs.~2 SGO nochmal klargestellt, was sich aus \S~8 Abs.~5 SGO, der die Entscheidung über die Zuständigkeit mit der Eröffnung als Entscheidung über die Korrektheit der Anrufung zusammenlegt, ergibt: Der relevante Zeitpunkt für die Entscheidung ist immer die mitgliedschaftliche Zuordnung zum Zeitpunkt der Anrufung.
@@ -204,7 +232,7 @@ Im Falle einer Ordnungsmaßnahme würde dann ein verbandsfremdes Schiedsgericht 
 Für die Frage der verbandsfremden Ermessenskontrolle muss allerdins bedacht werden, dass in beiden Fällen das letzinstanzlich zuständige Bundesschiedsgericht das letzte Wort hätte.
 Daher scheint ein außeinanderfallen von Verbandszugehörigkeit des ersintanzlich zuständigen Schiedsgerichts und des verhängenden Organs schlussendlich doch unproblematisch, zumal die gesonderte Regelung durch \S~6 Abs.~4 SGO\index[paridx]{SGO!6@\S~6!4@Abs.~4} wohl auch das mitbezweckt hat.
 
-Für den Parteiausschluss wird das wohl davon abhängen, wie man ihn im Vergleich zu den anderen Ordnungsmaßnahmen einsortiert. Wird er einfach nur als stärkste Ordnungsmaßnahme einsortiert, auf die das Prozedere der Ordnungsmaßnahmen nach \SSS~14, 6 Abs.~1 BS\index[paridx]{BS!\S~14}\index[paridx]{BS!6@\S~6!1@Abs.~1} voll anwendbar ist\footnote{So wohl die jüngste Ansicht des Bundesschiedsgerichtes in \cite{BSG3615HS} und die Mindermeinung des Bundesschiedsrichters a.D. Markus Gerstel in \cite{BSG20131005}.}, muss sich der Betroffene wohl damit abfinden, dass er ab Anhörung  bzw. spätestens ab dem Beschluss des Organs über die Einreichung einen Verbandswechsel der Zulässigkeit des Verfahrens nicht mehr entgegenhalten kann, um auch hier eine Gleichheit mit den anderen Ordnungsmaßnahmen zu erreichen.
+Für den Parteiausschluss wird das wohl davon abhängen, wie man ihn im Vergleich zu den anderen Ordnungsmaßnahmen einsortiert. Wird er einfach nur als stärkste Ordnungsmaßnahme einsortiert, auf die das Prozedere der Ordnungsmaßnahmen nach \SSS~14, 6 Abs.~1 BS\index[paridx]{BS!\S~14}\index[paridx]{BS!6@\S~6!1@Abs.~1} voll anwendbar ist\footnote{So wohl die jüngste Ansicht des Bundesschiedsgerichtes in \cite{BSG3615HS} und das Sondervotum des Bundesschiedsrichters Markus Gerstel in \cite{BSG20131005}.}, muss sich der Betroffene wohl damit abfinden, dass er ab Anhörung  bzw. spätestens ab dem Beschluss des Organs über die Einreichung einen Verbandswechsel der Zulässigkeit des Verfahrens nicht mehr entgegenhalten kann, um auch hier eine Gleichheit mit den anderen Ordnungsmaßnahmen zu erreichen.
 Denn wenn das betroffene Mitglied  von dem Plan für Parteiaausschlussverfahren wusste und deswegen den Verband wechselt, ist es nicht schutzwürdig, ganz unabhängig davon, ob der Wechsel im Innenverhältnis der Gliederungen nach \S~3 Abs.~2a BS\index[paridx]{SGO!3@\S~3!2@Abs.~2}
 Folgt man hingegen der in \cite{BSG20131005} aufgezeigten Rechtssprechungslinie und sieht die Anhörung durch das einleitende Organ im Parteiausschlussverfahren als nicht verpflichtend an, so ergibt sich kein Grund, warum das Mitglied einen solchen Beschluss gegen sich gelten lassen muss, von dem es im Zweifel noch nicht einmal etwas wusste.
 Das Vertrauen darauf, dass grundsätzlich nur die Organe der Gliederungen, in denen man tatsächlich aktuell Mitglied ist,  Disziplinarmaßnahmen gegen das Mitglied unternehmen, ist dann schutzwürdig und der relevante Zeitpunkt für die Entscheidung über die Zuständigkeit dürfte wieder mit der Anrufung beim Schiedsgericht zusammenfallen.\footnote{Vgl.  wie schon oben \cite[S. 9]{BSG115HS}, unter II.1.c.c).}
@@ -224,9 +252,11 @@ Eine Ausnahme besteht dann, wenn sich die Frist aus dem vorgetragenen nicht bere
 Das ist typischerweise der Fall, wenn eine schlichtungspflichtige Anrufung vorliegt, aber Angaben zur Schlichtung und ihrem Umfang v.a. in zeitlicher Hinsicht fehlen.
 In diesem Fall kann wegen der Hemmungswirkung der Schlichtung die Frist nicht berechnet werden, daher bietet sich hier zunächst eine Nachbesserungsaufforderung an.
 
-Die Nachbesserungsaufforderung ist allerdings keine satzungsmäßige Pflicht der Schiedsgerichte.
-Jedes Schiedsgericht kann eine unvollständige Anrufung auch sofort mit einem Nichteröffnungsbeschluss bescheiden.
-Allerdings ist jahrelange Praxis der meisten Schiedsgerichte, zunächst um Nachbesserung zu bitten, da dies allen Beteiligten, auch dem Schiedsgericht selbst unnötige Arbeit ersparen kann.
+Die Nachbesserung ist in der Schiedsgerichtsordnung nicht erwähnt.
+Dennoch sollten Schiedsgerichte der anrufenden Partei die Möglichkeit dazu geben, sofern die Klage noch nicht verfristet ist.
+Ob es gar eine Pflicht für die Schiedsgerichte gibt, Gelegenheit zur Nachbesserung zu geben, ist unklar.
+Das Landesschiedsgericht Bayern nimmmt dies jedenfalls dann an, wenn innerhalb der regulären Anrufungsfrist noch genügend Zeit verblieben ist\footnote{So in \cite[S.~2~f.]{LSGBYB413U}, in der Bestätigung der Entscheidung durch das Bundesschiedsgericht mit \cite{BSG314HA} weiter thematisiert.}, das Landesschiedsgericht Brandenburg nimmt dies wohl selbst dann an, wenn nur noch wenig Restfrist verblieben ist und setzt dann eine die Anrufungsfrist verlängernde Nachfrist.\footnote{So wohl jedenfalls in \cites[S.~7]{LSGBB133}{LSGBB134}.}
+Das Bundesschiedsgericht hat zumindest die Erfordernis einer die Anrufungsfrist verlängernden Nachfristsetzung verneint,\footnote{\cites[S.~2]{BSG2315HS}[S.~2]{BSG20130227}.} und auch ansonsten die verpflichtende Erfordernis einer Nachbesserungsaufforderung  nie angenommen und zumindest dann verneint, wenn eine Fristberechnung dem Schiedsgericht nicht möglich ist und es durch die Nachbesserungsaufforderung, die eine die Anrufungsfrist ersetzende neue Frist setzt, einer ansonsten verfristeten Anrufung zum Erfolg verhelfen könnte.\footnote{\cites{BSG3915HS}[S.~2]{BSG215HS}}.
 
 \subsection{Nichtseröffnungsbeschluss}
 \label{Standardworkflow:Beschluss:Nichteroeffnung}
@@ -256,6 +286,23 @@ Den Parteien soll mitgeteilt werden:
 \item Gründe, die Richter nach \S~5 Abs.~2 Satz~3 SGO\index[paridx]{SGO!5@\S~5!2@Abs.~2} anzeigen müssen.
 \item Nur bei Verfahren über eine Ordnungsmaßnahme oder einen Parteiausschluss: Frage an das Mitglied, ob es ein nichtöffentliches Verfahren wünscht.
 \end{enumerate}
+
+\subsection{Folgenden eines Eröffnungsbeschlusses}
+Die Schiedsgerichtsordnung startet das Verfahren mit dem Eröffnungsbeschluss.
+Das heißt, ab diesem Moment entsteht ein Prozessrechtsverhältnis zwischen dem eröffnenden Schiedsgericht und den Verfahrensparteien nach den Verfahrensregeln der Schiedsgerichtsordnung.
+Dieses Verfahren kann grundsätzlich nur durch ein Urteil abgeschlossen werden, \S~12 Abs.~1 SGO\index[paridx]{SGO!12@\S~12!1@Abs.~1}.\footnote{So explizit auch schon \cite[S.~2]{BSG20131204}.}
+Das heißt auch, dass eine andere Beendigung dieses Prozessrechtsverhältnisses nicht zulässig ist.
+Ausnahmen stellen hier selbständige Verfahren im einstweiligen Rechtsschutz vor\footnote{Ausführlich zu Eigenständigkeit der Verfahren im einstweiligen Rechtsschutz \cite[S.~3]{LSGBB145} mit Verweis auf \cites[S.~4]{LSGHE20140423II} und die in \cites{BSG41114ES}{BSG3314EA} offensichtlich zum Ausdruck kommende Praxis des Bundesschiedsgerichtes, bestätigt von \cite[S.~2~f.]{BSG4214ESWiderspruch}.}, die mit der einstweiligen Anordnung begründet werden, da es dort keine Eröffnung gibt, und mit dem Widerspruchsurteil oder der Verfristung seiner Beantragung beendet werden.
+
+Allerdings gab es in der Rechtsprechung bisher schon Abweichungen von diesem Schema.
+Das Bundesschiedsgericht ist in jüngster Zeit von Rücknehmbarkeit eines Eröffnungsbeschlusses ausgeganen, wenn seine Anforderungen nicht mehr erfüllt sind oder es noch nie waren und wendet dahingehend \S~10 Abs.~1 SGO analog an.\footnote{So \cite{BSGPP100127862}, allerdings ist unklar, wie das Bundesschiedsgericht diese Analogie begründet. Schon das vorhandensein einer planwidrigen Regelungslücke ist äußerst fraglich, allerdings ist es auch problematisch, aus einer Regelung zur Füllung einer solchen planwidrigen Regelungslücke ihr Gegenteil anzunehmen. Zudem hat das Bundesschiedsgericht hier die Antragsbefugnis fehlerhaft für ein Statthaftigkeitskriterium gehalten und sie nicht, wie es korrekt wäre, als echtes Zulässigkeitskriterium behandelt.}
+
+In älterer Rechtsprechung war das Bundesschiedgericht daher der Überzeugung, dass eine solche Rücknahme nicht möglich ist, es sei denn, dass der Eröffnungsbeschluss schon explizit unter einem Vorbehalt bestehender aus einer mit einer Frist versehenen Nachbesserungsaufforderung getroffen wurde\footnote{\cite[S.~2]{BSG20130715} zu \cite{LSGNRW2013011}, in welchem das Bundesschiedsgericht einen solchen Vorbehalt erfüllt sah.}.
+
+Unter Anbetracht des Wortlauts der Schiedsgerichtsordnung ist die neuere Ansicht des Bundesschiedsgerichtes nicht haltbar.
+Es fehlt schlicht an der notwendigen planwidrigen Regelungslücke, die Vorraussetzung jeder Analogie ist.
+Es gibt auch bei einem Eröffnungsbeschluss, der trotz Nichterfüllung der Anrufungskriterien oder in Unzuständigkeit getroffen wurde, die Möglichkeit, das Verfahren und damit das Prozessrechtsverhältnis wegen Unzulässigkeit jederzeit mittels Urteil zu beenden.
+Es bedarf daher schon gar keiner Analogie.
 
 \chapterbib
 % \end{refsection}
