--- a/sghandbuch.bib
+++ b/sghandbuch.bib
@@ -135,6 +135,15 @@
   gender = {sn},
   url = {http://piraten-bsg.de/#1926183737}
 }
+@RULING{BSG20131230,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 2014-01-19},
+  date = {2013-12-30},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#1925409114}
+}
 @RULING{BSG1614HS,
   court = {Bundesschiedsgericht},
   shortcourt = {BSG},
@@ -206,6 +215,134 @@
   date = {2014-07-09},
   gender = {sn},
   url = {https://wiki.piratenbrandenburg.de/images/f/f2/LSG-Bbg-13-5\_Urteil\_2014\_07\_09.pdf}
+}
+@RULING{LSGNRW2013011,
+  court = {Landesschiedsgericht~Nordrhein-Westfalen},
+  shortcourt = {LSG~NRW},
+  decisiontype = {Beschluss},
+  sign = {LSG NRW 2013-011},
+  date = {2013-07-01},
+  gender = {sn},
+  url = {https://wiki.piratenpartei.de/Datei:Beschluss_LSG-NRW-2013-011_Ablehnung_anonym.pdf}
+}
+@RULING{LSGHE20130624,
+  court = {Landesschiedsgericht~Hessen},
+  shortcourt = {LSG~HE},
+  decisiontype = {Urteil},
+  sign = {LSG-HE 2013-06-24},
+  date = {2013-10-12},
+  gender = {sn},
+  url = {https://wiki.piratenpartei.de/Datei:LSG-HE-2013-06-24_anonym.pdf}
+}
+@RULING{LSGHE20140423II,
+  court = {Landesschiedsgericht~Hessen},
+  shortcourt = {LSG~HE},
+  decisiontype = {Beschluss},
+  sign = {LSG-HE 2014-04-23},
+  date = {2014-09-03},
+  gender = {sn},
+  url = {http://wiki.piratenpartei.de/Datei:LSG-HE-2014-04-23-II_anonym.pdf}
+}
+@RULING{LSGBYB413U,
+  court = {Landesschiedsgericht~Bayern},
+  shortcourt = {LSG~HE},
+  decisiontype = {Beschluss},
+  sign = {LSG-BY-B 4/13 U},
+  date = {2014-01-25},
+  gender = {sn},
+  url = {https://wiki.piratenpartei.de/Datei:LSG-BY-B4-13U-anonym-2.pdf}
+}
+@RULING{BSG20131028,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Urteil},
+  sign = {BSG 2013-10-28},
+  date = {2014-06-05},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#1925468719}
+}
+@RULING{BSG3915HS,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 39/15-H S},
+  date = {2015-07-23},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#2002527855}
+}
+@RULING{BSG2315HS,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 23/15-H S},
+  date = {2015-05-28},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#2062000810}
+}
+@RULING{BSG215HS,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 2/15-H S},
+  date = {2015-01-29},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#507750759}
+}
+@RULING{BSG20130227,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 2013-02-27},
+  date = {2013-04-08},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#1926332659}
+}
+@RULING{BSG314HA,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 3/14-H A},
+  date = {2014-03-13},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#1234136037}
+}
+@RULING{BSG4214ESWiderspruch,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Urteil},
+  sign = {BSG 42/14-E S},
+  date = {2014-10-23},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#1169288117}
+}
+@RULING{BSG41114ES,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 11/14-E S},
+  date = {2014-05-15},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#553873875}
+}
+@RULING{BSG3314EA,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 33/14-E A},
+  date = {2014-06-12},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#424585601}
+}
+
+
+@RULING{BSG20131204,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 2013-12-04},
+  date = {2014-01-15},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#1925409203}
 }
 @RULING{BSG3615HS,
   court = {Bundesschiedsgericht},
@@ -348,15 +485,32 @@
   gender = {sn},
   url = {https://www.jurion.de/Urteile/OLG-Naumburg/2009-06-04/3-WF-76_09}
 }
-
-@RULING{LSGBB147,
+@RULING{LSGBB133,
   court = {Landesschiedsgericht~Brandenburg},
   shortcourt = {LSG~BB},
   decisiontype = {Urteil},
-  sign = {LSG Bbg 14/7},
-  date = {2015-04-16},
+  sign = {LSG Bbg 13/3},
+  date = {2014-07-09},
   gender = {sn},
-  url = {https://wiki.piratenbrandenburg.de/images/d/d7/LSG-Bbg-14-7_Beschluss_2015_04_16.pdf}
+  url = {https://wiki.piratenbrandenburg.de/Datei:LSG-Bbg-13-3_Beschluss_2014_07_09.pdf}
+}
+@RULING{LSGBB134,
+  court = {Landesschiedsgericht~Brandenburg},
+  shortcourt = {LSG~BB},
+  decisiontype = {Beschluss},
+  sign = {LSG Bbg 13/4},
+  date = {2013-11-20},
+  gender = {sn},
+  url = {https://wiki.piratenbrandenburg.de/Datei:LSG-Bbg-13-4_Beschluss_2013_11_20.pdf}
+}
+@RULING{LSGBB145,
+  court = {Landesschiedsgericht~Brandenburg},
+  shortcourt = {LSG~BB},
+  decisiontype = {Beschluss},
+  sign = {LSG Bbg 14/5},
+  date = {2014-10-24},
+  gender = {sn},
+  url = {https://wiki.piratenbrandenburg.de/Datei:LSG-Bbg-14-5_Urteil_2014_10_24.pdf}
 }
 @RULING{LSGBB146,
   court = {Landesschiedsgericht~Brandenburg},
@@ -365,7 +519,16 @@
   sign = {LSG Bbg 14/6},
   date = {2015-04-25},
   gender = {sn},
-  url = {https://wiki.piratenbrandenburg.de/images/4/4a/LSG-Bbg-14-6_Urteil_2015_04_25.pdf}
+  url = {https://wiki.piratenbrandenburg.de/Datei:LSG-Bbg-14-6_Urteil_2015_04_25.pdf}
+}
+@RULING{LSGBB147,
+  court = {Landesschiedsgericht~Brandenburg},
+  shortcourt = {LSG~BB},
+  decisiontype = {Urteil},
+  sign = {LSG Bbg 14/7},
+  date = {2015-04-16},
+  gender = {sn},
+  url = {https://wiki.piratenbrandenburg.de/Datei:LSG-Bbg-14-7_Beschluss_2015_04_16.pdf}
 }
 @RULING{BVerfGE17294,
   court 			= {Bundesverfassungsgericht},
